--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "axonlib"
+name = "synnet"
 version = "0.0.1"
 authors = [
   { name="Eric Lin", email="ericlinnh@gmail.com" },
